<resources>
  <string name="main_tv_points_text">Dağıtılacak Puan :</string>
  <string name="main_edt_name_hint">Uzay aracı ismi giriniz</string>
  <string name="main_tv_durability_text">Dayanıklılık</string>
  <string name="main_tv_speed_text">Hız</string>
  <string name="main_tv_capacity_text">Kapasite</string>
  <string name="main_btn_continue_text">Devam Et</string>
  <string name="main_name_not_valid_error_toast_text">Uzay aracı ismi giriniz</string>
  <string name="main_durability_not_valid_error_toast_text">Dayanıklılık 1\'den az olamaz</string>
  <string name="main_speed_not_valid_error_toast_text">Hız 1\'den az olamaz</string>
  <string name="main_capacity_not_valid_error_toast_text">Kapasite 1\'den az olamaz</string>

  <string name="stations_bnv_title_text">İstasyon</string>
  <string name="stations_tv_ugs_text">UGS :</string>
  <string name="stations_tv_eus_text">EUS :</string>
  <string name="stations_tv_ds_text">DS :</string>
  <string name="stations_edt_search_hint">Search</string>
  <string name="stations_btn_travel_text">Travel</string>
  <string name="stations_tv_item_station_coordinate_x_text">Kordinat X: %s</string>
  <string name="stations_tv_item_station_coordinate_y_text">Kordinat Y: %s</string>
  <string name="stations_tv_item_station_eus_text">EUS: %s</string>
  <string name="stations_tv_item_station_capacity_text">Kapasite: %s</string>
  <string name="stations_tv_item_station_stock_text">Mevcut: %s</string>
  <string name="stations_tv_item_station_need_text">Gereken: %s</string>
  <string name="stations_tv_initial_station_text">Dünya</string>
  <string name="stations_tv_task_completed_text">Teslimat sonlandı</string>
  <string name="stations_tv_empty_stations_text">Bu kriterde istasyon mevcut değil</string>
  <string name="stations_tv_irrelevant_station_text">Bu istasyon kriterlerine uygun değil</string>

  <string name="favorites_bnv_title_text">Favoriler</string>
  <string name="favorites_tv_page_title_text">Favoriler</string>
  <string name="favorites_tv_empty_favorites_text">Favori istasyon bulunmamaktadır</string>
  <string name="favorites_tv_item_station_eus_text">EUS</string>
  <string name="favorites_tv_item_station_capacity_text">Kapasite</string>
</resources>