<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:clipChildren="false"
  android:clipToPadding="false"
  android:padding="20dp">

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_points_title"
    style="@style/TextAppearance.App.XXLarge.Bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:text="@string/main_tv_points_text"
    android:textColor="@color/black"
    app:layout_constraintEnd_toStartOf="@+id/tv_points_value"
    app:layout_constraintHorizontal_chainStyle="spread"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_points_value"
    style="@style/TextAppearance.App.XLarge.Bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_point_value"
    android:padding="16dp"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="@+id/tv_points_title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/tv_points_title"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="15" />

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/edt_name"
    style="@style/TextAppearance.App.XLarge.Regular"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:background="@drawable/bg_point_value"
    android:hint="@string/main_edt_name_hint"
    android:imeOptions="actionGo"
    android:inputType="textCapSentences"
    android:maxLines="1"
    android:paddingStart="4dp"
    android:paddingTop="12dp"
    android:paddingBottom="10dp"
    android:textColor="@color/black"
    android:textColorHint="@color/gray"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_points_title" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_durability_title"
    style="@style/TextAppearance.App.Large.Bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/main_tv_durability_text"
    android:textColor="@color/black"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edt_name" />

  <androidx.appcompat.widget.AppCompatSeekBar
    android:id="@+id/skb_durability"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:padding="6dp"
    android:progressBackgroundTint="@color/black"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_durability_title" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_speed_title"
    style="@style/TextAppearance.App.Large.Bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/main_tv_speed_text"
    android:textColor="@color/black"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/skb_durability" />

  <androidx.appcompat.widget.AppCompatSeekBar
    android:id="@+id/skb_speed"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:padding="6dp"
    android:progressBackgroundTint="@color/black"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_speed_title" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_capacity_title"
    style="@style/TextAppearance.App.Large.Bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/main_tv_capacity_text"
    android:textColor="@color/black"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/skb_speed" />

  <androidx.appcompat.widget.AppCompatSeekBar
    android:id="@+id/skb_capacity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:padding="6dp"
    android:progressBackgroundTint="@color/black"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_capacity_title" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_continue"
    style="@style/TextAppearance.App.Large.Bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:padding="20dp"
    android:text="@string/main_btn_continue_text"
    android:textAllCaps="false"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/skb_capacity" />

</androidx.constraintlayout.widget.ConstraintLayout>